tests/machine/x/kotlin/match_full.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/match_full.kt:9:5: error: 'when' expression must be exhaustive, add necessary 'else' branch
    when (__t) {
    ^
/workspace/mochi/tests/machine/x/kotlin/match_full.kt:13:9: error: unresolved reference: _
        _ -> "unknown"
        ^
/workspace/mochi/tests/machine/x/kotlin/match_full.kt:21:5: error: 'when' expression must be exhaustive, add necessary 'else' branch
    when (__t) {
    ^
/workspace/mochi/tests/machine/x/kotlin/match_full.kt:25:9: error: unresolved reference: _
        _ -> "normal"
        ^
/workspace/mochi/tests/machine/x/kotlin/match_full.kt:47:5: error: 'when' expression must be exhaustive, add necessary 'else' branch
    when (__t) {
    ^
/workspace/mochi/tests/machine/x/kotlin/match_full.kt:50:9: error: unresolved reference: _
        _ -> "many"
        ^
