tests/machine/x/kotlin/match_full.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:37:36Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)
// Code generated from match_full.mochi

val x = 2

val label = run {
    val __t = x
    when (__t) {
        1 -> "one"
        2 -> "two"
        3 -> "three"
        _ -> "unknown"
    }
}

val day = "sun"

val mood = run {
    val __t = day
    when (__t) {
        "mon" -> "tired"
        "fri" -> "excited"
        "sun" -> "relaxed"
        _ -> "normal"
    }
}

val ok = true

val status = run {
    val __t = ok
    when (__t) {
        true -> "confirmed"
        false -> "denied"
    }
}

/**
 * Auto-generated from Mochi
 * @param n Int
 * @return String
 */
fun classify(n: Int): String {
    return run {
    val __t = n
    when (__t) {
        0 -> "zero"
        1 -> "one"
        _ -> "many"
    }
}
}

fun main() {
    println(label)
    println(mood)
    println(status)
    println(classify(0))
    println(classify(5))
}
